Fix footer margin spacing on articles

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -41,6 +41,7 @@ article {
     background: #EEE;
     padding: 15px;
     border-top: 1px solid #CCC;
+    margin-top: 25px;
 
     nav {
       span:after {
